# CFM

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
cfm/: __init__.py  inference.py  train.py
cfm/config/: CFM_7B.yaml
cfm/dataset/: data_collator_qwen.py  pairwise_dataset.py  utils.py
cfm/model/: qwen2vl_trainer.py  test_differentiable.py
cfm/utils/: parser.py
docs/: index.html
docs/static/css/: index.css
